# git2llm

./: .env.example  .gitignore  README.md  pyproject.toml  skills-lock.json
click_output/: dataset.jsonl  dataset_with_meta.jsonl  excluded_log.jsonl  run_report.json
configs/: default.yaml  django_run.yaml  permissive.yaml  strict.yaml
git2llm/: cli.py  config.py  models.py  orchestrator.py  writer.py
git2llm/auth/: __init__.py  oauth.py  pat.py  token_store.py
git2llm/collectors/: __init__.py  base.py  commits.py  issues.py  pull_requests.py  tags.py
git2llm/discovery/: __init__.py  repo_lister.py  selector.py
git2llm/filters/: __init__.py  content_quality.py  dedup.py  hard_exclusions.py  structural.py
git2llm/formatters/: __init__.py  alpaca.py  sharegpt.py  templates.py
git2llm/utils/: git_utils.py  logging.py  rate_limiter.py  repo_health.py  split.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_config.py  test_filters.py  test_formatters.py  test_split.py
